Make music releases appear as a fixed row with a scrollbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -144,17 +144,28 @@ main {
 
 .releases {
 	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: stretch;
 	align-content: center;
-	
+	overflow-x: scroll;
 	button {
 		margin: 1rem 2rem 1rem 2rem;
 	}
 }
 
 .column-container { 
+}
+
+@media screen and (min-width: 1577px) {
+	main {
+		max-width: 1577px;
+	}
+}
+
+@media screen  and (max-width: 1577px) {
+	main {
+		max-width: 1577px;
+	}
 }
 
 @media screen and (max-width: 900px) {
